--- a/templates/vhost.conf
+++ b/templates/vhost.conf
@@ -1,9 +1,9 @@
-<VirtualHost *:80>
-        ServerName {{docker_swagger_generator_web_name}}
+<VirtualHost *:{{docker_swagger_generator_proxy_port}}>
+        ServerName {{docker_swagger_generator_proxy_name}}
         ServerSignature Off
 
-        ProxyPass           /  http://localhost:{{docker_swagger_generator_web_port}}/ nocanon
-        ProxyPassReverse    /  http://localhost:{{docker_swagger_generator_web_port}}/
+        ProxyPass           /  http://localhost:{{docker_swagger_generator_container_port}}/ nocanon
+        ProxyPassReverse    /  http://localhost:{{docker_swagger_generator_container_port}}/
         ProxyRequests       Off
         AllowEncodedSlashes NoDecode
 </VirtualHost>
