--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,6 @@
 ---
 - name: docker_swagger_generator_apache2_restart
-  service: name=apache2 enabled=yes state=restarted
+  service:
+    name: "{{docker_swagger_generator_apache2_restart_command}}"
+    state: restarted
+  when: docker_swagger_generator_apache2_exists.stat.exists == true
