--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,26 +1,29 @@
 ---
+- name: configure os
+  set_fact:
+    server_base_os: "{{ansible_distribution|lower}}{{ansible_distribution_major_version|int}}"
+
+- name: include os variables
+  include_vars: "{{server_base_os}}.yml"
+
+# define os variables
+
+- name: define docker_swagger_generator_apache2_restart_command
+  set_fact:
+    docker_swagger_generator_apache2_restart_command: "{{__docker_swagger_generator_apache2_restart_command}}"
+  when: docker_swagger_generator_apache2_restart_command is not defined
+
+# docker container
+
 - name: install container
   docker:
     name: "{{docker_swagger_generator_container_name}}"
     image: "swaggerapi/swagger-generator:{{docker_swagger_generator_version}}"
     state: "{{docker_swagger_generator_state}}"
     ports:
-      - "{{docker_swagger_generator_web_port}}:8080"
+      - "{{docker_swagger_generator_container_port}}:8080"
 
-- name: enable apache2 modules
-  apache2_module: state=present name={{item}}
-  with_items:
-    - proxy
-    - proxy_http
-  notify:
-    - docker_swagger_generator_apache2_restart
+# setup os
 
-- name: create apache2 sites
-  template: src=vhost.conf dest=/etc/apache2/sites-available/100-docker-swagger-generator.conf
-  notify:
-    - docker_swagger_generator_apache2_restart
-
-- name: enable apache2 sites
-  command: a2ensite 100-docker-swagger-generator.conf creates=/etc/apache2/sites-enabled/100-docker-swagger-generator.conf
-  notify:
-    - docker_swagger_generator_apache2_restart
+- name: setup {{server_base_os}}
+  include: "{{server_base_os}}.yml"
