## [2.3.0] - 2017-07-28 ### Added - docker_swagger_generator_pull: "no" - docker_swagger_generator_state: "started" - docker_swagger_generator_restart_policy: "always"

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,9 @@
 ---
-docker_swagger_generator_state: "started"
 docker_swagger_generator_version: "v2.1.6"
 docker_swagger_generator_container_name: "swagger-generator"
 docker_swagger_generator_container_port: "49161"
 docker_swagger_generator_proxy_name: "swagger-generator.box.entwickl.de"
 docker_swagger_generator_proxy_port: "80"
+docker_swagger_generator_pull: "no"
+docker_swagger_generator_state: "started"
+docker_swagger_generator_restart_policy: "always"
